# traditional-CV-armorplate-tracker

./: README.md
CV_tracker/: CMakeLists.txt
CV_tracker/src/: main.cpp
CV_tracker/tasks/: detector.cpp  kalmanfilter.hpp  serial.cpp  serial.hpp
calibration/: CMakeLists.txt  calibration.cpp
